--- a/src/content/blog/中文命名测试.md
+++ b/src/content/blog/中文命名测试.md
@@ -1,11 +1,10 @@
-
-
 ---
-title: "标题"
-description: "这是描述"
+title: 模版测试巴拉巴拉
+description: 测试一下obsidian自动生成模版
 publishedAt: 2025-05-29
-tags: ["Cherry Studio", "AI", "css", "UI"]
+tags:
+  - typescript
+  - AI
+  - 巴啦啦
 ---
-
-
-中文测试
+# 这里是撤是netting
