--- a/src/content/blog/谷歌、领英等顶级公司的 高绩效秘籍.md
+++ b/src/content/blog/谷歌、领英等顶级公司的 高绩效秘籍.md
@@ -1,3 +1,4 @@
+
 ---
 title: OKR 工作法
 description: 颠覆KPI的全新效率评估体系领英首席产品经理 深度解读
@@ -11,6 +12,7 @@ tags:
 ## 谷歌、领英等顶级公司的 高绩效秘籍
 
 <div style="width:100%; margin:1.5rem 0; border-radius:8px; overflow:hidden; box-shadow:0 4px 6px -1px rgba(0,0,0,0.1), 0 2px 4px -1px rgba(0,0,0,0.06);">
-  <iframe src="/pdfs/OKR.pdf" title="我的PDF文档" width="100%" height="1500px" style="border:none; display:block;"></iframe>
+  <object data="/pdfs/OKR.pdf" type="application/pdf" width="100%" height="1500px" style="border:none; display:block;">
+    <p>无法显示PDF文档。您可以<a href="/pdfs/OKR.pdf">点击这里下载</a>查看。</p>
+  </object>
 </div>
-
